# evalem

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: lint.yml  test.yml
evalem/: __init__.py  __version__.py  _base.py  structures.py
evalem/_base/: abc.py  evaluators.py  metrics.py  models.py  pipelines.py  structures.py
evalem/cv/evaluators/: __init__.py  _base.py  basics.py
evalem/cv/metrics/: __init__.py  _base.py
evalem/cv/misc/: datasets.py
evalem/cv/models/: defaults.py
evalem/cv/pipelines/: __init__.py
evalem/evaluators/: :w  __init__.py  _base.py  basics.py  dummy.py
evalem/metrics/: __init__.py  _base.py  basics.py  dummy.py  semantics.py
evalem/misc/: datasets.py  utils.py
evalem/models/: __init__.py  _base.py  defaults.py
evalem/nlp/: __init__.py  structures.py
evalem/nlp/evaluators/: __init__.py  _base.py  basics.py  dummy.py
evalem/nlp/metrics/: __init__.py  _base.py  basics.py  dummy.py  llm.py  semantics.py
evalem/nlp/misc/qa_beir_eval/: ReadMe.txt  eval_qa_beir_for_nasa.py
evalem/nlp/models/: __init__.py  _base.py  defaults.py
evalem/pipelines/: __init__.py  _base.py  defaults.py
notebooks/: evalem-metrics-playground.ipynb
tests/: conftest.py  jury_format_test.py  test_jury_format.py
tests/metrics/: _base.py  fixtures.py  test_basics.py  test_semantics.py
tests/models/: fixtures.py  test_classification.py  test_defaults.py  test_qa.py
tests/pipelines/: test_defaults.py  test_pipeline.py
