[build-system]
requires = [
    "hatchling>=1.8.1",
]
build-backend = "hatchling.build"

[project]
name = "evalem"
dynamic = [
    "version",
]
description = "An evaluation framework for your NLP pipelines"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { email = "np0069@uah.edu" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pyarrow>=18.1.0",
    "bert-score>=0.3.13",
    "datasets==2.9.0",
    "evaluate>=0.4.3",
    "jury==2.3.1",
    "loguru>=0.6.0",
    "numpy>=2.2.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "optimum>=1.23.3",
    "pandas>=2.2.3",
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
    "sacrebleu==2.4.3",
    "scikit-learn>=1.6.0",
    "sentencepiece==0.2.0",
    "seqeval==1.2.2",
    "torch>=2.5.1",
    "transformers>=4.47.0",
    "pip>=24.3.1",
]

[project.optional-dependencies]
cv = [
    # dependencies for cv module
]
nlp = [
    # dependencies for nlp module
]

llm = [
    "outlines>=0.1.9",
    "openai>=1.57.3",
]

[project.urls]
Homepage = "https://github.com/NASA-IMPACT/evalem"

[tool.hatch.version]
path = "evalem/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/evalem",
]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "black==23.3.0",
  "flake8==5.0.4",
]
[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run = "run-coverage --no-cov"
